kubesail_2/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gotify-server-ingress
spec:
  rules:
  - host: dcorto.usw1.kubesail.io
    http:
      paths:
        - backend:
            serviceName: gotify-server-service
            servicePort: 8080
